# tractian-case-study-rag-implementation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260329_0001_initial.py
docs/: research.md  runbook.md
docs/adr/: 0001-two-lane-rag.md
fixtures/: assets.json  log_incident.json  manual_job.json
fixtures/logs/: incident_reports_2025.md  maintenance_log_2025.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/answer/: AnswerPanel.tsx  CauseCard.tsx  CheckList.tsx  ConfidenceMeter.tsx  EvidenceCard.tsx  SafetyBanner.tsx
frontend/src/components/layout/: PageShell.tsx  Sidebar.tsx
frontend/src/components/pipeline/: PipelineEdge.tsx  PipelineFlow.tsx  PipelineNode.tsx
frontend/src/components/shared/: FileDropzone.tsx  JsonViewer.tsx  MarkdownEditor.tsx  StatusBadge.tsx
frontend/src/hooks/: useApi.ts  usePollingJob.ts
frontend/src/lib/: flows.ts
frontend/src/pages/: Dashboard.tsx  LogIngest.tsx  ManualIngest.tsx  Sessions.tsx  Troubleshoot.tsx
scripts/: smoke.sh
src/maintenance_copilot/: answering.py  api.py  cli.py  config.py  database.py  domain.py  ingest.py  main.py  orchestration.py  providers.py  retrieval.py  sessions.py  worker.py
tests/: test_answering.py  test_copilot.py  test_provider_smoke.py
