[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maintenance-copilot"
version = "0.1.0"
description = "Production-oriented two-lane RAG maintenance copilot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "fastapi>=0.116.0",
  "google-cloud-documentai>=3.12.0",
  "google-genai>=1.16.1",
  "httpx>=0.28.1",
  "langgraph>=1.1.3",
  "langgraph-checkpoint-postgres>=3.0.5",
  "opentelemetry-api>=1.38.0",
  "opentelemetry-exporter-otlp-proto-http>=1.38.0",
  "opentelemetry-instrumentation-fastapi>=0.60b1",
  "opentelemetry-sdk>=1.38.0",
  "orjson>=3.10.18",
  "pinecone>=7.3.0",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.8.1",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.18",
  "PyJWT[crypto]>=2.10.1",
  "PyMuPDF>=1.26.0",
  "redis>=6.0.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.4",
]

[project.scripts]
maintenance-copilot = "maintenance_copilot.cli:main"
maintenance-copilot-worker = "maintenance_copilot.worker:run_worker"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
